fix overflow prolem

--- a/src/style.css
+++ b/src/style.css
@@ -52,8 +52,6 @@ body {
   font-family: "Roboto", sans-serif;
   font-weight: 300;
   font-size: var(--roboto-regular-14);
-
-  overflow: hidden;
 }
 h1,
 h3,
@@ -158,8 +156,9 @@ main {
   width: 100%;
   height: 100vh;
   transition: transform ease 0.3s;
-  overflow: hidden;
-  overscroll-behavior: contain;
+  overflow-x: hidden;
+
+  overscroll-behavior: none;
 }
 .container {
   display: flex;
@@ -200,11 +199,12 @@ main {
 /* side bar */
 
 article {
-  position: absolute;
+  position: static;
   transition: transform ease 0.3s;
   top: 0;
-  transform: translateX(-250px);
-  overflow-x: hidden;
+  left: 0;
+  transform: translateX(-100%);
+  /* overflow-x: hidden; */
   background-color: var(--slate-900);
   display: flex;
   flex-direction: column;
